--- a/RTPP/perfil_Master.html
+++ b/RTPP/perfil_Master.html
@@ -12,26 +12,28 @@
     <header class="datosMaster">
         <h1 id="nombreMaster">David</h1>
         <h4>master account</h4>
+        <button id="botonVerListaDiariaLlegada">Ver Lista</button>
     </header>
-    <div class="buttonAccount">
-    <button id="botonVerListaDiariaLlegada">Ver Lista</button>
-    </div>
-    <body>
-    <div>
-        <h3 id="infoFormacion">Formación 08/07/2019-31/01/2020</h3>
-    </div>
-    <div>
-        <input type="time" id="editarHorario">Hora de Ingreso <br>
-        <input type="time" id="editarHoraLimite">Limite de atraso <br>
-        <input type="button" id="verEstadisticas" value="Estadisticas"><br>
-        <button onclic="desabilitar"id="desabilitar">a</button>
-    </div>
-    <div class="botonWOD">
-        <input type="button" id="buttonWheelOfLove" value="Premio">
-        <input type="button" id="buttonWheelOfDoom" value="Castigo">
-    </div>
 
-    <scrip src="funciones.js"></scrip>
-    </scrip>
+    <body>
+        <div class="cuerpoMaster">
+            <h3 id="infoFormacion">Formación 08/07/2019-31/01/2020</h3>
+            <form id="horarios">
+                <input type="time" id="horaDeEntrada"> &nbsp; &nbsp; Hora de Ingreso <br>
+                <input type="time" id="horaDeMargen"> &nbsp; &nbsp; Limite de atraso  <br><br>
+                <input type="button" id="verEstadisticas" value="Estadisticas"><br>
+            </form>
+            <div>
+                <button onclick="disable()" id="desactivar">Guardar</button>
+                <button onclick="habilitar()" id="activar">Habilitar</button> </button>
+            </div>
+            <div class="botonWOD">
+                <input type="button" id="buttonWheelOfLove" value="Premio">
+                <input type="button" id="buttonWheelOfDoom" value="Castigo">
+            </div>
+        </div>
+    </body>
+    <script src="funciones.js"></SCRIPT>
+
 
 </html>
